crates/normalize-cfg/tests/snapshots/rust_cfg__rust_early_return.snap
---
source: crates/normalize-cfg/tests/rust_cfg.rs
expression: mermaid
---
flowchart TD
    b0{"Branch<br/>lines 1-2"}
    b1(["exit"])
    b2["Statement<br/>lines 2-4"]
    b3{"Branch<br/>lines 4-5"}
    b4["Statement<br/>lines 5-7"]
    b5["Statement<br/>lines 7-9"]

    b0 -->|"true"| b2
    b0 -->|"false"| b3
    b2 --> b3
    b3 -->|"true"| b4
    b3 -->|"false"| b5
    b4 --> b5
    b5 --> b1
