crates/normalize-cfg/tests/snapshots/rust_cfg__rust_linear.snap
---
source: crates/normalize-cfg/tests/rust_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 --> b1
