crates/normalize-cfg/tests/snapshots/rust_cfg__rust_nested.snap
---
source: crates/normalize-cfg/tests/rust_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])
    b2{"LoopHead<br/>line 3"}
    b3["LoopExit<br/>lines 9-11"]
    b4["LoopBody<br/>lines 3-9"]

    b0 --> b2
    b2 -->|"true"| b4
    b2 -->|"false"| b3
    b4 -->|"back"| b2
    b3 --> b1
